--- a/index.html
+++ b/index.html
@@ -210,12 +210,12 @@
   <script>
     // Initialize Firebase
     var config = {
-      apiKey: "AIzaSyA6lz0PLmEMxCcRwS-l5b2ry8Y-YrOWEDw",
-      authDomain: "mmo-fun.firebaseapp.com",
-      databaseURL: "https://mmo-fun.firebaseio.com",
-      projectId: "mmo-fun",
-      storageBucket: "mmo-fun.appspot.com",
-      messagingSenderId: "1084178029398"
+      apiKey: "AIzaSyDbDDyr5E-l_R6BquvY-DPCjSQec_7Fh6I",
+      authDomain: "newpoker2-26271.firebaseapp.com",
+      databaseURL: "https://newpoker2-26271.firebaseio.com",
+      projectId: "newpoker2-26271",
+      storageBucket: "",
+      messagingSenderId: "564032377879"
     };
     firebase.initializeApp(config);
   </script>
